--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    />
     <!-- Chart.js -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Ülke Bilgi Sistemi</title>
   </head>
   <body>
@@ -34,15 +40,30 @@
               role="searchbox"
               autocomplete="off"
             />
-            <button id="btnSearch" type="button" class="btn btn-primary" aria-label="Ara">
+            <button
+              id="btnSearch"
+              type="button"
+              class="btn btn-primary"
+              aria-label="Ara"
+            >
               <i class="fas fa-search me-2"></i>Ara
             </button>
-            <button id="btnLocation" type="button" class="btn btn-danger" title="Konumunu Bul" aria-label="Konumunu Bul">
+            <button
+              id="btnLocation"
+              type="button"
+              class="btn btn-danger"
+              title="Konumunu Bul"
+              aria-label="Konumunu Bul"
+            >
               <i class="fa-solid fa-location-crosshairs"></i>
             </button>
           </div>
           <div class="input-group">
-            <select id="continentSelect" class="form-select" aria-label="Kıta Seçimi">
+            <select
+              id="continentSelect"
+              class="form-select"
+              aria-label="Kıta Seçimi"
+            >
               <option value="">Kıta Seçiniz</option>
               <option value="Africa">Afrika</option>
               <option value="Americas">Amerika</option>
@@ -50,7 +71,12 @@
               <option value="Europe">Avrupa</option>
               <option value="Oceania">Okyanusya</option>
             </select>
-            <button id="btnFilterByContinent" type="button" class="btn btn-primary" aria-label="Kıtaya Göre Filtrele">
+            <button
+              id="btnFilterByContinent"
+              type="button"
+              class="btn btn-primary"
+              aria-label="Kıtaya Göre Filtrele"
+            >
               <i class="fas fa-globe me-2"></i>Kıtaya Göre Filtrele
             </button>
           </div>
@@ -61,7 +87,15 @@
           <div class="circle"></div>
           <div class="circle"></div>
           <div class="circle"></div>
-          <p style="color: var(--text-secondary); margin-top: 1rem; font-size: 1.1rem;">Yükleniyor...</p>
+          <p
+            style="
+              color: var(--text-secondary);
+              margin-top: 1rem;
+              font-size: 1.1rem;
+            "
+          >
+            Yükleniyor...
+          </p>
         </div>
       </div>
       <div id="details">
@@ -93,7 +127,7 @@
                     <div class="stat-detail" id="populationDensity"></div>
                   </div>
                 </div>
-                
+
                 <div class="stat-card area">
                   <div class="stat-icon">
                     <i class="fas fa-map"></i>
@@ -152,19 +186,39 @@
             </div>
             <!-- Para Birimi Çevirici -->
             <div class="currency-converter mt-4">
-              <h4><i class="fas fa-money-bill-wave me-2"></i>Para Birimi Çevirici</h4>
+              <h4>
+                <i class="fas fa-money-bill-wave me-2"></i>Para Birimi Çevirici
+              </h4>
               <div class="row mt-3">
                 <div class="col-md-5">
-                  <input type="number" id="amount" class="form-control" placeholder="Miktar" aria-label="Para miktarı">
+                  <input
+                    type="number"
+                    id="amount"
+                    class="form-control"
+                    placeholder="Miktar"
+                    aria-label="Para miktarı"
+                  />
                 </div>
                 <div class="col-md-3">
-                  <select id="fromCurrency" class="form-select" aria-label="Kaynak para birimi"></select>
+                  <select
+                    id="fromCurrency"
+                    class="form-select"
+                    aria-label="Kaynak para birimi"
+                  ></select>
                 </div>
                 <div class="col-md-3">
-                  <select id="toCurrency" class="form-select" aria-label="Hedef para birimi"></select>
+                  <select
+                    id="toCurrency"
+                    class="form-select"
+                    aria-label="Hedef para birimi"
+                  ></select>
                 </div>
                 <div class="col-md-1">
-                  <button id="convertBtn" class="btn btn-primary" aria-label="Dönüştür">
+                  <button
+                    id="convertBtn"
+                    class="btn btn-primary"
+                    aria-label="Dönüştür"
+                  >
                     <i class="fas fa-exchange-alt"></i>
                   </button>
                 </div>
@@ -185,7 +239,12 @@
     </div>
 
     <!-- Theme Toggle Button -->
-    <button class="theme-toggle" id="themeToggle" title="Tema Değiştir" aria-label="Tema Değiştir">
+    <button
+      class="theme-toggle"
+      id="themeToggle"
+      title="Tema Değiştir"
+      aria-label="Tema Değiştir"
+    >
       <i class="fas fa-sun"></i>
       <i class="fas fa-moon"></i>
     </button>
@@ -195,9 +254,11 @@
     <!-- GeoJSON -->
     <script src="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.min.js"></script>
     <!-- Weather Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css"
+    />
     <!-- Diğer script etiketlerinden önce -->
     <script type="module" src="script.js"></script>
-    <script src="script.js"></script>
   </body>
 </html>
